--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         * {
             margin: 0;
             padding: 0;
-            overflow: hidden; /* 隐藏滚动条 */
+            overflow: hidden;
         }
 
         html, body {
@@ -16,43 +16,40 @@
             height: 100%;
         }
 
-        #video-container {
-            width: 100vw;   /* 视窗宽度 */
-            height: 100vh;  /* 视窗高度 */
-            background: #000;
+        #bilibili-player {
+            width: 100vw;
+            height: 100vh;
+            border: none;
         }
 
-        #fullscreen-video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* 保持视频比例并填满容器 */
+        /* 移动端适配层 */
+        @media screen and (max-width: 768px) {
+            #bilibili-player {
+                transform: scale(1.08);  /* 补偿移动端播放器控制栏 */
+            }
         }
     </style>
 </head>
 <body>
-    <div id="video-container">
-        <video id="fullscreen-video" autoplay muted playsinline>
-            <source src="nbpl.mp4" type="video/mp4">
-            <!-- 建议提供多种视频格式 -->
-            <source src="nbpl.webm" type="video/webm">
-            您的浏览器不支持视频播放
-        </video>
-    </div>
+    <iframe 
+        id="bilibili-player"
+        src="//player.bilibili.com/player.html?bvid=BV1GJ411x7h7&autoplay=true&danmaku=0&high_quality=1&muted=1"
+        scrolling="no"
+        allowfullscreen="true"
+        sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts allow-popups"
+    ></iframe>
 
     <script>
-        // 自动播放处理（部分浏览器需要）
+        // 自动播放处理
         document.addEventListener('DOMContentLoaded', function() {
-            const video = document.getElementById('fullscreen-video');
+            const iframe = document.getElementById('bilibili-player');
             
-            // 尝试自动播放
-            const playPromise = video.play();
-            
-            if (playPromise !== undefined) {
-                playPromise.catch(error => {
-                    // 自动播放失败时显示提示
-                    console.log('自动播放被阻止，请手动点击视频播放');
-                });
-            }
+            // 解除静音按钮（需要用户交互）
+            document.addEventListener('click', function() {
+                iframe.contentWindow.postMessage(JSON.stringify({
+                    command: 'unmute'
+                }), '*');
+            });
         });
     </script>
 </body>
